# tf2-mnist

./: README.md  eval-metrics.json  pyproject.toml
model/: train_eval_model.py
