[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["joshua patterson <joshua.patterson@silverpond.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.0"
chartist = { path = "../plotypus", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
